[package]
name = "thru"
version = "0.1.2"
authors = ["Don Han <plestoon@email.com>"]
license = "MIT"
description = "Create QUIC/TCP/UDP tunnels for one another"
readme = "README.md"
homepage = "https://github.com/plestoon/thru"
repository = "https://github.com/plestoon/thru"
keywords = ["cli", "tunnel", "QUIC", "TCP", "UDP"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.77.0"

[dependencies]
anyhow = "1.0.81"
bytes = "1.6.0"
clap = { version = "4.5.2", features = ["derive"] }
futures-util = { version = "0.3.30", features = ["futures-sink"] }
pin-project-lite = "0.2.13"
quinn = "0.10.2"
rustls = "0.21.0"
rustls-pemfile = "1.0.0"
sender-sink = "0.2.1"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tokio-util = { version = "0.7.10", features = ["full"] }
url = "2.5.0"
rustls-native-certs = "0.6.3"

[[bin]]
name = "thru"